--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <meta name="theme-color" content="#9a77f6" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
